# code_analysis

./: .gitignore  CMakeLists.txt  README  README.md  compile_commands.json
app/: main.cpp
lib_a/include/lib_a/: lib_a.hpp
lib_a/src/: lib_a.cpp
tests/: conanfile.txt  main.cpp  test_a.cpp
